# davsync

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: cli.yml  main.rs
