[package]
name = "davsync"
version = "0.1.0"
authors = ["Romain Taprest <romain@taprest.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustydav = "^0.1.3"
webdav-handler = "^0.2.0"
clap = {version = "~2.33.3", features = ["yaml"]}
cli-toolbox = { version = "^0.8.0", features = ["debug", "report"] }
verbosity = "^0.1.0"
